# test101

./: .env.example  .gitignore  CLAUDE.md  DUCKLAKE_PROMPT.md  README.md  pyproject.toml  railway.md  railway_cli.bat  run.bat
.claude/: settings.local.json
.github/workflows/: deploy-railway.yml  run-pipeline.yml
config/: pipelines.yaml.example  settings.yaml.example  sources.yaml.example
docker/: docker-compose.yml  generate_seed_data.py
docker/ducklake/: Dockerfile  requirements.txt  wait_and_run.sh
docs/: analisis_geografico.md  dbt_duckdb_dagster_railway_JOR.md  deploy_railway.md  diagrama arquitectura.pen  ducklake-architecture.pen  ecomm_parquet_sources.md  guia_incorporar_fuente.md  guia_modelado_dbt.md  mockup-tablero.pen  nomenclatura.md  plan_modelado_ecomm_parquet.md  propuesta-valor-clientes.md  setup_docker.md  setup_local.md
ducklake/: __init__.py
ducklake/cli/: __init__.py  main.py
ducklake/connectors/: __init__.py  base.py  csv_connector.py  mysql.py
ducklake/core/: __init__.py  base.py  catalog.py  config.py  orchestrator.py  quality.py
ducklake/layers/: __init__.py  consume.py  raw.py  staging.py
ducklake/transformations/: __init__.py  cleaning.py  enrichment.py  validation.py
ducklake/utils/: duckdb_helper.py  logger.py  parquet_helper.py
examples/: example_csv_pipeline.py  example_custom_transformation.py
railway/dashboard/: app.py  requirements.txt
railway/ducklake/: .env.example  Dockerfile  config.py  dagster.yaml  init.sql  nginx.conf  pipeline.py  pipeline_ecommerce.py  reporter.py  start.sh  (+1 more)
tests/: conftest.py
(+105 files in other folders)
